...
    <string name="solve_square">Solve square (-1\u2605)</string>
    <string name="solve_square_free">Solve square for free</string>
    <string name="solve_word">Solve word (-3\u2605)</string>
    <string name="solve_word_free">Solve word for free</string>
    <string name="free">FREE</string>
    <string name="menu_report_error">Report error</string>
    <string name="tip">%1$d. %2$s [%3$s]</string>
    <string name="youve_solved_the_puzzle">You\'ve solved the puzzle! (+5\u2605)</string>
    <string name="reset">RESET</string>
    <string name="another_crossword">ANOTHER CROSSWORD</string>
    <string name="leave_the_training">LEAVE THE TRAINING</string>
    <string name="train_the_same_topics">train the same topics</string>
    <string name="train_other_topics">train other topics</string>
    <string name="remove">REMOVE</string>
    <string name="choose_at_least_one_topic">Please, select at least one topic</string>
    <string name="not_enough_words">The selected topics doesn\'t consist of %1$d words</string>
    <string name="choose_other_words">Please, choose other words. I can\'t build crossword</string>
    <string name="delete_crossword_question">Do you want to delete %1$s?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name ="damaged_data">The crossword data is damaged</string>
    <string name ="number_of_stars">number of stars</string>
    <string name ="generate_crossword">generate crossword</string>
    <string name= "training">training</string>
    <string name ="level">your level</string>
    <string-array name="levels">
        <item>beginner(A1)</item>
...
