...
    <include
        layout = "@layout/toolbar_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <org.akop.ararat.view.CrosswordView
        android:id="@+id/crossword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:minLines="1"
        android:textColor="#fff"
        android:textSize="18sp"
...
